--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
 body {
-  background-color:  red;
+  background-color:  white;
+}
+
+.slider {
+
+background-image: url("assets/images/slider.jpg");
+
 }
