--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@ body {
 
 .slider {
 
-background-image: url("../images/slider.jpeg");
-
+	background-image: url("../images/slider.jpeg");
+	background-repeat: no-repeat;
+	background-position:top center;
+	background-size: 100%;
+	
+	width:100%;
+	height:450px;
+	
 }
