--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 	position: relative;
 	
 	width:100%;
-	height:60rem;
+	height:50vh;
 	
 	background-image: url("../images/slider.jpeg");
 	background-repeat: no-repeat;
@@ -20,7 +20,7 @@ body {
 	
 	text-align:center;
 	color:#fff;
-	font-size: 10rem;
+	font-size: 7rem;
 	
 }
 
@@ -43,3 +43,6 @@ body {
 	text-align:center;
 	
 }
+
+
+
