--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,46 +8,46 @@ body {
 }
 
 .slider {
-	
+
 	position: relative;
-	
+
 	width:100%;
 	height:60rem;
 	height-min:450px;
-	
+
 	background-image: url("../images/slider.jpeg");
 	background-repeat: no-repeat;
 	background-position:top center;
 	background-size: 100%;
-	
+
 }
 
 .slider h1 {
-	
+
 	text-align:center;
 	color:#fff;
 	font-size: 7rem;
-	
+
 }
 
 .slider .join {
-	
+
 	position:absolute;
 	bottom: 10rem;
-	
+
 	width:100vw;
-	
+
 	text-align:center;
-	
+
 }
 
 .slider .join button {
-	
+
 	min-width:200px;
 	padding:10px;
-	
+
 	text-align:center;
-	
+
 }
 
 .navbar-brand {
@@ -62,4 +62,11 @@ body {
 
 .parameters label {
 	margin-top:2rem;
+}
+
+
+/*MAP*/
+
+#map {
+  height: 600px;
 }
