--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ padding-bottom:0rem;
 	font-family:BrandFont;
 	font-size:4rem;
 	leff-margin:2rem;
+	color:#59819e!important;
 }
 
 .navbar-rightwing li {
