--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,6 @@ padding-bottom:0rem;
 	font-family:BrandFont;
 	font-size:4rem;
 	leff-margin:2rem;
-	color:#59819e!important;
 }
 
 .navbar-rightwing li {
@@ -95,7 +94,7 @@ padding-bottom:0rem;
 
 .title_template {
 	text-align:center;
-	
+	font-family: 'Bitter', serif;
 	margin:2rem 0 2rem 0;
 	
 }
