--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,7 @@ body {
 	position: relative;
 
 	width:100%;
-	height:60rem;
-	height-min:450px;
+	height:35vw;
 
 	background-image: url("../images/slider.jpeg");
 	background-repeat: no-repeat;
@@ -108,3 +107,20 @@ padding-bottom:0rem;
 	color:#f31915;
 	background:#fdcdcd;
 }
+/*
+@media screen and (max-width: 480px) {
+	.slider {
+		height:20rem;
+	}
+}
+@media screen and (min-width: 480px) and (max-width: 700px) {
+	.slider {
+		height:30rem;
+	}
+}
+@media screen and (min-width: 700px) and (max-width: 1200px) {
+	.slider {
+		height:40rem;
+	}
+}
+*/
