--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,10 @@ padding-bottom:0rem;
 	margin-top:2rem;
 }
 
+.contact {
+	text-align:center;
+
+}
 
 /*MAP*/
 
@@ -96,6 +100,12 @@ padding-bottom:0rem;
 	font-family: 'Bitter', serif;
 	margin:2rem 0 2rem 0;
 	
+}
+
+.title_desc {
+	font-size:2rem;
+	text-align:center;
+	margin:2rem 0 2rem 0;
 }
 
 #error_search:empty {
